# comparing_trees

./: README.md  annot-6311-МешковИВ.docx  КР ТМП.docx
cpp/: AATree.cpp  AATree.h  AVLTree.cpp  AVLTree.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  CommonTypes.h  Config.h  ConsoleUI.cpp  ConsoleUI.h  DataGenerator.cpp  DataGenerator.h  FileExporter.cpp  FileExporter.h  Statistics.cpp  Statistics.h  Treap.cpp  Treap.h  TreeBase.h  TwoThreeTree.cpp  TwoThreeTree.h  Visualizer.cpp  Visualizer.h  main.cpp
csv/: возрастанию.csv  почти.csv  случайно.csv  убыванию.csv
python/: tree_visualization_app.py
